@@ -1,3 +1,8 @@
+2008-08-05  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- More hintful image title.
+
 2007-08-08  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.*.php:
